--- a/css/style.css
+++ b/css/style.css
@@ -23,8 +23,8 @@ body {
 }
 .row1 > * {
     padding: 10px;
-    margin-top: 15px;
-    margin-bottom: 15px; 
+    /* margin-top: 15px;
+    margin-bottom: 15px; */
 }
 nav > ul {
     color: white;
@@ -41,25 +41,33 @@ header {
     width: 80%;
     text-align: center;
 }
-.col-small > button {
-    text-align: right;
+.button {
+    border-radius: 20px;
+    padding: 10px;
+    font-size: 1em; 
+}
+.small {
     background-color: white;
     color: black;
-    border-radius: 20px;
-    padding: 5px;
     border-color: white;
-    font-size: 1em;
+}
+.big {
+    background-color: #23272A;
+    color: white;
 }
 .header2 {
-    /* height: 300px; */
-    background-color: #00008B;
-     padding: 30px;
+    background-image: url(../img/jumbo.png);
+    height: 500px;
+    background-size: cover;
+    background-position: center;
 }
 .header2 > *  {
-    background-color: #EE82EE;
-     width: calc(50% - 60px); 
-     height: 300px;
+     width: calc(50% - 60px);
     margin: auto;
+    color: white;
+    text-align: center;
+    font-size: 1em;
+    line-height: 20px;
 }
 /* Fine Header */
 /* Inizio Main  */
