--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,6 @@ body {
     font-family: 'Whitney Semibold', sans-serif;
     font-family: 'Whitney Book', sans-serif;
     font-family: 'Whitney Light', sans-serif;
-
 }
 /* Debug  */
 .debug {
@@ -18,17 +17,20 @@ body {
     margin: 0 auto;
 }
 /* Header */
-.row {
+.flex {
     display: flex;   
+    align-items: center;
 }
 .row1 > * {
-    padding: 10px;
-    /* margin-top: 15px;
-    margin-bottom: 15px; */
+   padding: 5px;
+}
+li {
+    display: inline-block;
+    padding-right: 5px;
 }
 nav > ul {
     color: white;
-    font-size: 1em;
+    font-size: 1.5em;
 }
 header {
     background-color: #255EE9;
@@ -36,10 +38,10 @@ header {
 }
 .row1 > .col-small {
     width: 20%;
+    justify-content: end;
 }
 .row1 > .col-big {
     width: 80%;
-    text-align: center;
 }
 .button {
     border-radius: 20px;
@@ -54,19 +56,21 @@ header {
 .big {
     background-color: #23272A;
     color: white;
+    margin-left: 15px;
 }
 .header2 {
     background-image: url(../img/jumbo.png);
-    height: 500px;
-    background-size: cover;
+    /* height: 500px; */
+    background-size: calc(100%);
     background-position: center;
+    padding: 120px;
 }
 .header2 > *  {
-     width: calc(50% - 60px);
+     width: calc(50%);
     margin: auto;
     color: white;
     text-align: center;
-    font-size: 1em;
+    font-size: 1.5em;
     line-height: 20px;
 }
 /* Fine Header */
