--- a/css/style.css
+++ b/css/style.css
@@ -34,7 +34,7 @@ nav > ul {
 }
 header {
     background-color: #255EE9;
-    margin-bottom: 20px;
+    margin-bottom: 70px;
 }
 .row1 > .col-small {
     width: 20%;
@@ -66,7 +66,7 @@ header {
     padding: 120px;
 }
 .header2 > *  {
-     width: calc(50%);
+     width: 50%;
     margin: auto;
     color: white;
     text-align: center;
@@ -77,25 +77,29 @@ header {
 /* Inizio Main  */
 /* Prima e terza sezione */
 .row2 > .col-big {
-    background-color: #1E90FF;
-    width: 60%;
-    height: 400px;
+    width: calc(55% - 50px)
+    margin-right: 50px;
 }
 .row2 > .col-small {
-    background-color:#FFC0CB;
-    width: 40%;
-    height: 400px;
+    width: calc(45% - 50px); 
+    font-size: 1.5em;
+    margin-left: 50px;
+}
+.row2 {
+    margin-bottom: 70px;
 }
 /* Seconda sezione */
 .row3 > .col-big {
-    background-color: #1E90FF;
-    width: 60%;
-    height: 400px;
+    width: calc(55% - 20px);
+    margin-left: 20px;
 }
 .row3 > .col-small {
-    background-color:#FFC0CB;
-    width: 40%;
-    height: 400px;
+    width: calc(45% - 20px);
+    font-size: 1.5em;
+    margin-right: 20px;
+}
+.row3 {
+    margin-bottom: 70px;
 }
 /* Quarta sezione */
 .gray {
