--- a/css/style.css
+++ b/css/style.css
@@ -21,10 +21,11 @@ body {
     display: flex;   
     align-items: center;
 }
+/* Nav bar  */
 .row1 > * {
    padding: 5px;
 }
-li {
+.nav {
     display: inline-block;
     padding-right: 5px;
 }
@@ -43,6 +44,7 @@ header {
 .row1 > .col-big {
     width: 80%;
 }
+/* Login */
 .button {
     border-radius: 20px;
     padding: 10px;
@@ -58,9 +60,9 @@ header {
     color: white;
     margin-left: 15px;
 }
+/* Seconda parte del Header */
 .header2 {
     background-image: url(../img/jumbo.png);
-    /* height: 500px; */
     background-size: calc(100%);
     background-position: center;
     padding: 120px;
@@ -114,7 +116,8 @@ header {
     font-size: 1.5em;
     padding: 20px;
 }
-h3 {
+/* Button */
+main > h3 {
     background-image: url(../img/stars.svg);
     background-size: 60%;
     background-position: center;
@@ -128,6 +131,8 @@ h3 {
     color: white;
     margin-bottom: 50px;
 }
+/* Fine Main */
+/* Inizio Footer */
 footer {
     background-color:#23272A;
     padding: 10px;
@@ -137,6 +142,16 @@ footer {
     background-color: #F08080;
     height: 400px;
     width: 30%;
+}
+.col-big1 > h3 {
+    color: #6778BD;
+    font-size: 1.5em;
+}
+.flag {
+    width: 10%;
+}
+span {
+    color: white;
 }
 .row4 > .col-big2 {
     background-color: #20B2AA;
